--- a/manageExpense/package.json
+++ b/manageExpense/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "bun vite",
+    "build": "bun vite build",
+    "lint": "bun eslint .",
+    "preview": "bun vite preview"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.35.2",
